Revert "Erstellung der Messages"
This reverts commit e47143831f68d1e0283ae886598e09d453c44557